Bug 1212823 - Use correct coordinate space for box-shadow native rect when doing themed drawing. r=roc